syntax = "proto3";
package com.javayh.agent.rpc;

option java_outer_classname = "LoggerCollectorProto";

import "google/protobuf/timestamp.proto";
import "MessageType.proto";

message LoggerCollector {

    MessageType messageType = 1;

    int64 id = 2;
    /**
     * 请求的trace id
     */
    string traceId = 3;
    /**
     * 操作的方法类型 GET | POST
     */
    string method = 4;

    /**
     * 请求路径
     */
    string url = 5;
    /**
     * 请求的参数
     */
    string query = 6;
    /**
     * 请求的参数
     */
    string body = 7;
    /**
     * 操作耗时
     */
    int64 actionTime = 8;
    /**
     * 操作人的ip
     */
    string ip = 9;
    /**
     * 服务的名字
     */
    string appName = 10;
    /**
     * 请求访问的类型，{@link com.javayh.agent.common.constant.LoggerType;}
     */
    int32 type = 11;
    /**
     * 创建的时间
     */
    google.protobuf.Timestamp createTime = 12;

    /**
     * 创建人
     * <p>
     * 这里需要结合自己的开发脚手架进行创建人
     */
    string createBy = 13;

    /**
     * 异常信息
     */
    string errorMsg = 14;

    /**
     * 数据来源，自动拦截或者自定义埋点
     * {@link com.javayh.agent.common.constant.LoggerSourceType}
     */
    int32 sourceType = 15;

    /**
     * 是否忽略此消息，消息传递时判断是否需要继续向下传递
     */
    bool ignore = 16;


}